feat: Implémentation parcours post-AVC 3D avec React Three Fiber
- Création d'une expérience 3D immersive avec React Three Fiber
- Timeline 3D avec 10 stations représentant le parcours post-AVC
- Navigation caméra fluide avec animations flyTo
- Panneau de détails interactif avec informations détaillées
- Effets visuels néon/cyberpunk avec éclairage et particules
- Interface utilisateur moderne avec overlay et navigation
- Optimisé pour desktop avec design responsive
- Build et linting validés

--- a/package.json
+++ b/package.json
@@ -3,25 +3,60 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "for port in {3000..3005}; do lsof -ti:$port | xargs kill -9 2>/dev/null; done && next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "prettier --check .",
+    "format": "prettier --write .",
+    "format:staged": "prettier --write",
+    "icons": "node scripts/generate-icons.js",
+    "icons:watch": "nodemon --watch logo.png --exec \"npm run icons\"",
+    "og:generate": "node scripts/generate-og-image.js",
+    "lighthouse": "node scripts/lighthouse-test.js",
+    "lighthouse:desktop": "node scripts/lighthouse-test.js http://localhost:3000 desktop",
+    "lighthouse:mobile": "node scripts/lighthouse-test.js http://localhost:3000 mobile",
+    "lighthouse:both": "node scripts/lighthouse-test.js http://localhost:3000 both",
+    "optimize:images": "node scripts/optimize-images.js",
+    "screenshots": "node scripts/generate-screenshots.js",
+    "pwa:setup": "npm run screenshots && npm run optimize:images"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
+    "@types/qrcode": "^1.5.5",
+    "canvas": "^3.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.546.0",
+    "next": "16.0.0",
+    "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.23",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/three": "^0.180.0",
+    "babel-plugin-react-compiler": "1.0.0",
+    "chrome-launcher": "^1.2.1",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+    "imagemin": "^9.0.1",
+    "imagemin-avif": "^0.1.6",
+    "imagemin-webp": "^8.0.0",
+    "lighthouse": "^12.8.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "puppeteer": "^24.26.0",
+    "sharp": "^0.34.4",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
