--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
